# stock

./: .dockerignore  .gitignore  PRODUCT.md  database.sh  render.yaml  run-api.sh  run-web.sh
44ma/: .gitignore  README.md  compare_stacked_ma.py  compare_trades.py  config.example.json  (+14 more)
KALI/: .gitignore  CURRENT_STATE_REPORT.md  IMPLEMENTATION_REPORT.md  README.md  algo.md  pyproject.toml  requirements.txt
KALI/config/: default.yaml
KALI/data/manual/: pit_nifty150.csv
KALI/scripts/: build_features.py  fetch_universe.py  generate_daily_signals.py  run_backtest.py
KALI/src/kali/: __init__.py  config.py
KALI/src/kali/backtest/: __init__.py  portfolio.py  run.py  slippage.py  strategy.py  vectorbt_pass.py  walk_forward.py
KALI/src/kali/data/: __init__.py  ohlcv.py  screener.py  universe.py
KALI/src/kali/features/: __init__.py  fractal.py  indicators.py  microstructure.py  momentum.py  pipeline.py  price.py  stats.py  volatility.py  volume.py
KALI/src/kali/live/: __init__.py  daily_reconcile.py
KALI/src/kali/regime/: __init__.py  classifier.py
KALI/src/kali/risk/: __init__.py  circuit_breaker.py  kelly.py  sizing.py
KALI/src/kali/signals/: __init__.py  entries.py  exits.py  mtf_gate.py
KALI/src/kali/validation/: __init__.py  integrity.py  lookahead.py
KALI/tests/: test_daily_reconcile.py  test_exits_portfolio.py  test_hmm_pit.py  test_hurst.py  test_lookahead.py  test_ou.py  test_pyramiding.py  test_risk.py  test_screener.py  test_signals.py  test_universe.py  test_yang_zhang.py
KALI/tests/fixtures/: screener_itc.html  screener_itc_live.html
(+102 files in other folders)
