[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kali"
version = "0.1.0"
description = "NIFTY OCHLV quantitative strategy engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
    "hmmlearn>=0.3",
    "filterpy>=1.4",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "backtrader>=1.9",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "vectorbt>=0.26",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: live network tests (screener.in)",
]
